Add basic styling

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,6 @@
 .App {
-  background-color: #d9d9d9;
+  background-color: #265077;
+  height: 100vh;
+  width: 100%;
+  font-family: "Open Sans", serif;
 }
