--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,5 +2,5 @@
   background-color: #265077;
   height: 100vh;
   width: 100%;
-  font-family: "Open Sans", serif;
+  font-family: "Open Sans", sans-serif;
 }
