--- a/frontend/src/components/View/index.scss
+++ b/frontend/src/components/View/index.scss
@@ -1,4 +1,10 @@
 .view-cont {
   display: flex;
   flex-direction: row;
+  align-items: center;
+
+  .view-info-cont {
+    display: flex;
+    flex-direction: column;
+  }
 }
