Add a visual cue in infobox when movement and/or audio are detected. Create basic structure for Apex Chart (real-time chart). Add spinner animation for video before fully loaded

--- a/frontend/src/components/Detection/index.scss
+++ b/frontend/src/components/Detection/index.scss
@@ -3,6 +3,9 @@
   height: 360px;
   position: relative;
   margin: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   .video {
     width: 100%;
