Add logic and styling for infobox alert telling users if movement is detected

--- a/frontend/src/components/InfoBox/index.scss
+++ b/frontend/src/components/InfoBox/index.scss
@@ -20,8 +20,10 @@
       color: red;
     }
 
-    .infobox-movement,
-    .infobox-audio {
+    .infobox-detections {
+      color: #877f7d;
+    }
+    .active {
       color: green;
     }
   }
