--- a/frontend/src/components/InfoBox/index.scss
+++ b/frontend/src/components/InfoBox/index.scss
@@ -3,8 +3,7 @@
   border-radius: 10px;
   display: flex;
   justify-content: center;
-  max-width: 50vw;
-  max-height: 40vh;
+  width: 640px;
   flex-direction: column;
   padding: 20px;
 
