--- a/frontend/src/components/View/index.scss
+++ b/frontend/src/components/View/index.scss
@@ -1,6 +1,7 @@
 .view-cont {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 
   .view-info-cont {
