Write logic that converts video data into a Uint8Array that enables us to determine if sound is playing at any given point of the video

--- a/frontend/src/components/InfoBox/index.scss
+++ b/frontend/src/components/InfoBox/index.scss
@@ -25,5 +25,14 @@
     .active {
       color: green;
     }
+
+    .infobox-chart {
+      padding-top: 20px;
+
+      .infobox-chart-title {
+        display: flex;
+        justify-content: center;
+      }
+    }
   }
 }
