Make preview route a general aws route to make requests for past broadcast videos

--- a/frontend/src/components/PastBroadcastListItem/index.scss
+++ b/frontend/src/components/PastBroadcastListItem/index.scss
@@ -8,6 +8,7 @@
   font-size: 24px;
   color: #fff;
   margin: 20px;
+  padding: 5rem 0;
 
   border: 2px solid #fff;
   border-radius: 10px;
@@ -15,5 +16,11 @@
   &:hover {
     cursor: pointer;
     opacity: 0.75;
+  }
+
+  .pb-li-preview-pic {
+    width: 10vw;
+    height: auto;
+    border-radius: 10px;
   }
 }
