--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,15 @@
 .App {
   background-color: #265077;
-  height: 100vh;
-  width: 100%;
   font-family: "Open Sans", sans-serif;
+  height: 100vh;
+  overflow: hidden;
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.App::-webkit-scrollbar {
+  display: none;
 }
 
 h1 {
